# algostru

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: algostru.drawio
src/: lib.rs  logger.rs  main.rs
src/arithmetic/multiplication/: karatsuba.rs
src/collections/: mod.rs
src/collections/multiplication/: mod.rs  strassen.rs
src/collections/ordering/: bubble_sort.rs  insertion_sort.rs  inversion_count.rs  merge_sort.rs  merge_sort_inversion_count.rs  mod.rs  quick_sort.rs  selection_sort.rs  tim_sort.rs  time_sort.rs
src/collections/search/: closest_pair.rs  mod.rs
src/collections/sort/: merge_sort.rs  mod.rs
src/gui/: application.rs  mod.rs  router.rs  store.rs
src/gui/modules/: big_o_chart.rs  mod.rs  welcome.rs
src/gui/screen/: dashboard.rs  mod.rs  title.rs
src/math/: mod.rs
src/math/multiplication/: karatsuba.rs  mod.rs  strassen.rs
src/trees/: merkle_tree.rs
src/tries/: binary_search_tree.rs  merkle_tree.rs  mod.rs  radix.rs  radix_tree.rs
src/util/: event.rs  mod.rs
