[package]
name = "algostru"
version = "0.1.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "Algorithms and Data Structures"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
crossterm = "0.18.2"
tui = { version = "0.13.0", default-features = false, features = ['crossterm'] }
rand = "0.7"

[[bin]]
name = "algostru"
path = "src/main.rs"
bench = false