[package]
name = "algostru"
version = "0.4.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "Algorithms (algo) and Data Structures (stru)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gregl83/algostru"
homepage = "https://crates.io/crates/algostru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
crossterm = "0.18.2"
tui = { version = "0.13.0", default-features = false, features = ['crossterm'] }
rand = "0.7"
num-integer = "0.1.44"
num-bigint = "0.3"
nalgebra = "0.24.0"
sha2 = "0.9.3"
bytes = "1.0.1"

[lib]
name = "algostru"
path = "src/lib.rs"

[[bin]]
name = "algostru"
path = "src/main.rs"
bench = false